[project]
name = "mailscrambler"
version = "0.0.1"
authors = [
  { name="Demetrio Battaglia", email="deme3.iot@gmail.com" },
]
description = "E-mail scrambling library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deme3/emailscrambler"
"Bug Tracker" = "https://github.com/deme3/emailscrambler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"